--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create a PayPal IPN listener in minutes with this easy-to-use Express middleware.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/jhbertra/express-ipn/issues"
   },
-  "homepage": "https://github.com/jhbertra/express-ipn#readme"
+  "homepage": "https://github.com/jhbertra/express-ipn#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mockery": "^1.7.0",
+    "sinon": "^1.17.5"
+  },
+  "dependencies": {
+    "https": "^1.0.0",
+    "querystring": "^0.2.0"
+  }
 }
